--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,20 @@
-# Build and Release Folders
-bin/
-bin-debug/
-bin-release/
-[Oo]bj/ # FlashDevelop obj
-[Bb]in/ # FlashDevelop bin
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
 
-# Other files and folders
-.settings/
+# Folder config file
+Desktop.ini
 
-# Executables
-*.swf
-*.air
-*.ipa
-*.apk
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
